--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,7 +5,7 @@ RUN pip3 install -r requirements.txt
 RUN pip3 install newrelic
 COPY . /frontend
 ENTRYPOINT ["newrelic-admin", "run-program"]
-ENV NEW_RELIC_LICENSE_KEY=87433a1f39f971c49a073d49ede9cc08FFFFNRAL \
+ENV NEW_RELIC_LICENSE_KEY=$ENTER_YOUR_KEY_HEAR \
     NEW_RELIC_APP_NAME="flask_app" \
     NEW_RELIC_DISTRIBUTED_TRACING_ENABLED=true
 CMD ["chmod 777 app.py"]
